<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/fragment_detail_layout">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/vehicle_image"
            app:layout_constraintTop_toTopOf="@id/fragment_detail_layout"
            app:layout_constraintLeft_toLeftOf="parent"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/vehicle_title"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/vehicle_image"
            app:layout_constraintLeft_toLeftOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/vehicle_status"
            android:textStyle="bold"
            android:textSize="24sp"
            app:layout_constraintTop_toBottomOf="@id/vehicle_title"
            app:layout_constraintLeft_toLeftOf="parent" />

        <include layout="@layout/divider"
            app:layout_constraintTop_toBottomOf="@id/vehicle_status"
            app:layout_constraintLeft_toLeftOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/vehicle_info_header"
            android:text="@string/vehicle_info"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="@dimen/vehicle_info_header_size"
            app:layout_constraintTop_toBottomOf="@id/divider"
            app:layout_constraintLeft_toLeftOf="parent" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/detail_key_labels_layout"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/vehicle_info_header"
            app:layout_constraintLeft_toLeftOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/vehicle_location_label"
                android:text="@string/vehicle_location" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/vehicle_exterior_colour_label"
                android:text="@string/vehicle_exterior_colour" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/vehicle_interior_colour_label"
                android:text="@string/vehicle_interior_colour" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/vehicle_drive_type_label"
                android:text="@string/vehicle_drive_type" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/vehicle_transmission_label"
                android:text="@string/vehicle_transmission" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/vehicle_body_style_label"
                android:text="@string/vehicle_body_style" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/vehicle_engine_label"
                android:text="@string/vehicle_engine" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/vehicle_fuel_label"
                android:text="@string/vehicle_fuel" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/detail_value_labels_layout"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/vehicle_info_header"
            app:layout_constraintLeft_toRightOf="@id/detail_key_labels_layout">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/vehicle_location_value"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/vehicle_exterior_colour_value"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/vehicle_interior_colour_value"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/vehicle_drive_type_value"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/vehicle_transmission_value"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/vehicle_body_style_value"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/vehicle_engine_value"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/vehicle_fuel_value"
                android:textColor="@color/black" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/call_dealer_button"
        android:background="@color/toolbar_colour"
        android:text="@string/call_dealer_button_text"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textAllCaps="true"
        android:layout_gravity="center" />

</LinearLayout>